fixed accordian alignment, animated open accordian

--- a/src/features/Products/ProductAccordion.css
+++ b/src/features/Products/ProductAccordion.css
@@ -1,7 +1,17 @@
 .active {
   display: block;
+  animation: openAccordian 0.5s;
 }
 
 .hidden {
   display: none;
+}
+
+@keyframes openAccordian {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
